# tteg

./: .gitignore  README.md  RESEARCH.md  SKILL.md  STARTER_KIT.md  hn.md  pyproject.toml  reddit.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
distribution/: hackernews-showhn.md  reddit-commandline.md  reddit-sideproject.md
examples/: landing-page-images.json
rules/: tteg-landing-page-images.mdc
scripts/: agentmail_get_message.py  agentmail_recent.py  agentmail_reply.py  agentmail_send.py
skills/tteg/: SKILL.md
tests/: test_cli.py
tteg/: cli.py  client.py  mcp_server.py
tteg-api/: billing.py  db.py  main.py  models.py  requirements.txt
tteg-api/migrations/: 001_billing.sql  002_remove_billing_add_users.sql
tteg-api/sources/: __init__.py  pexels.py  unsplash.py
tteg-api/tests/: test_main.py  test_unsplash.py
