[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tteg"
version = "0.4.2"
description = "Free stock image search CLI for agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kushal"}]
keywords = ["unsplash", "stock-images", "cli", "ai-agents", "image-search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "click>=8.1.7",
  "mcp[cli]>=1,<2",
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://tteg.kushalsm.com"

[project.scripts]
tteg = "tteg.cli:main"
tteg-mcp = "tteg.mcp_server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
